# RND

./: .pre-commit-config.yaml  ActivationWiseRehearsalExperiments  DensityEstimationExperiments  InspectingNN  README.md  commands  commands.py  conda_activate.sh  pyproject.toml  requirements.txt  requirements_colab.txt  submit.sh  submitit_sweep.py  submitit_train.py  train.py  train_submitit.py  train_utils.py
notebooks/: mnist-ad.ipynb  mnist-gan.ipynb  mnist-vae-diff-loss.ipynb  mnist-vae.ipynb  playground.ipynb  playground_2.ipynb  pytorch-mnist-VAE.ipynb
notebooks/vq_vae_clf/: vq_vae_clf.ipynb
notebooks/vq_vae_image_gpt/: Transformer VQ-VAE.ipynb  Untitled.ipynb  tvq_vqe_visualizations.ipynb  vq_vae.ipynb
src/avalanche/callbacks/: __init__.py  cl_early_stopping.py  lightning_test_to_avalanche.py  lightning_training_to_avalanche.py  restore_best_model.py
src/callbacks/: lightning_test_to_avalanche.py  lightning_to_avalanche.py  lightning_training_to_avalanche.py  log_generated_images.py  log_model.py
src/configuration/: config.py  train.ini
src/data/: default_pl_module.py
src/loggers/: interactive_wandb.py
src/metrics/: rnd_accuracy.py  rnd_confusion_matrix.py  rnd_forgetting.py
src/model/: simple_mlp.py
src/qmae_latent_extension/: init_scrips.py  model_future.py  train.py  train_classifier.py  train_image_gpt.py
src/rnd/: init_scripts.py  train.py
src/scenarios/: mnist.py
src/strategies/: naive_pl.py
src/transformer_vq_vae/: init_scrips.py  mock_train_loop.py  model_future.py  train.py  train_classifier.py  train_image_gpt.py
src/utils/: io.py  shift_class_targets.py  summary_table.py  train_script.py
src/vae_ft/: init_scrips.py  train.py
src/vq_vae/: init_scrips.py  model_future.py  train.py  train_classifier.py  train_image_gpt.py
src/vq_vmae_joined_igpt/: init_scrips.py  model_future.py  train.py  train_classifier.py  train_image_gpt.py
src/vq_vmae_knn/: init_scrips.py  model_future.py  train.py  train_classifier.py  train_image_gpt.py
(+150 files in other folders)
