[tool.poetry]
name = "rnd"
version = "0.1.0"
description = ""
authors = ["ewriji <ewriji@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.64.0"
pydantic = "^1.9.1"
plotly = "^5.9.0"
wandb = "^0.12.21"
pandas = "^1.4.3"
torch = "^1.12.0"
torchvision = "^0.13.0"
torchaudio = "^0.12.0"
pytorch-lightning = "^1.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
