[tool.poetry]
name = "rnd"
version = "0.1.0"
description = ""
authors = ["ewriji <ewriji@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tqdm = "^4.64.0"
pydantic = "^1.9.1"
plotly = "^5.9.0"
wandb = "^0.12.21"
pandas = "^1.4.3"
torch = "^1.12.0"
torchvision = "^0.13.0"
torchaudio = "^0.12.0"
pytorch-lightning = "^1.6.5"
avalanche-lib = "^0.2.1"
torch-summary = "^1.4.5"
submitit = "^1.4.5"

[tool.poetry.group.dev.dependencies]
lovely-tensors = "^0.1.10"
jupyterlab = "^3.5.1"
ipywidgets = "^8.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
