[tool.poetry]
name = "rnd"
version = "0.1.0"
description = ""
authors = ["ewriji <ewriji@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tqdm = "^4.64.0"
pydantic = "^1.9.1"
plotly = "^5.9.0"
wandb = "^0.13.10"
pandas = "^1.4.3"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
pytorch-lightning = "^2.0.2"
avalanche-lib = "^0.3.1"
torch-summary = "^1.4.5"
submitit = "^1.4.5"
joblib = "^1.2.0"
lpips = "^0.1.4"
jupyter = "^1.0.0"
einops = "^0.6.1"
timm = "^0.6.13"
chainer = "^7.8.1"
transformers = "^4.29.2"
pytorch-metric-learning = "^2.1.1"

[tool.poetry.group.dev.dependencies]
lovely-tensors = "^0.1.10"
jupyterlab = "^3.5.1"
ipywidgets = "^8.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
